; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-cred.c_crgetgroups.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/spl/extr_spl-cred.c_crgetgroups.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.group_info* }
%struct.group_info = type { i64, i32*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @crgetgroups(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.group_info*, align 8
  %4 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  store i32* null, i32** %4, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load %struct.group_info*, %struct.group_info** %6, align 8
  store %struct.group_info* %7, %struct.group_info** %3, align 8
  %8 = load %struct.group_info*, %struct.group_info** %3, align 8
  %9 = getelementptr inbounds %struct.group_info, %struct.group_info* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp sgt i64 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %1
  %13 = load %struct.group_info*, %struct.group_info** %3, align 8
  %14 = getelementptr inbounds %struct.group_info, %struct.group_info* %13, i32 0, i32 1
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32* @KGIDP_TO_SGIDP(i32 %17)
  store i32* %18, i32** %4, align 8
  br label %19

19:                                               ; preds = %12, %1
  %20 = load i32*, i32** %4, align 8
  ret i32* %20
}

declare dso_local i32* @KGIDP_TO_SGIDP(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
